# Gymmer-AI-OpenRouter

./: README.md  env.example  main.py  pyproject.toml  test_api.py
app/: __init__.py  app.py
app/api/: __init__.py  chat_service.py  routes.py
app/core/: config.py
app/models/: __init__.py  schemas.py
